--- a/CreateClassWithReflection/CreateClassWithReflection.csproj
+++ b/CreateClassWithReflection/CreateClassWithReflection.csproj
@@ -7,4 +7,12 @@
     <Nullable>annotations</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <Optimize>True</Optimize>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.13.2" />
+  </ItemGroup>
+
 </Project>
